[person] fixing image size issue on ie11

--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -83,6 +83,11 @@ mgt-person .user-avatar {
     height: $avatar-size-s;
   }
 
+  &.card {
+    width: 75px;
+    height: 75px;
+  }
+
   &.row-span-2 {
     width: $avatar-size;
     height: $avatar-size;
